plugins/kotlin/idea/tests/testData/highlighterMetaInfo/KotlinInjection.kt.highlighting
// FIR_IDENTICAL
package language_injection

<!HIGHLIGHTING("textAttributesKey='KOTLIN_KEYWORD'")!>import<!> org.intellij.lang.annotations.<!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>Language<!>

<!HIGHLIGHTING("textAttributesKey='KOTLIN_ANNOTATION'")!>@Language<!>("kotlin")
val <!HIGHLIGHTING("textAttributesKey='KOTLIN_PACKAGE_PROPERTY'")!>test<!> = "fun test2() {}"
